2004-02-25  Nicolas S. Dade  <ndade@nsd.dyndns.org>

        * pwsafe: added pwsafe.1.in
        * pwsafe: fixed (harmless) "yes" "yes" output
          from configure.
        * pwsafe: print out character length of suggested
          random password (useful for sites that have
          a length limit)
        * pwsafe: when suggested random password entropy
          gets under 64 bits decrement by 8 bits rather
          than the usual 32 bits.

2004-02-20  Nicolas S. Dade  <ndade@nsd.dyndns.org>

        * pwsafe: added a cheap substitute for getopt_long
          to help out OSes that don't have it (solaris). 
          You can also use it by specifying --without-getopt_long
          if you somehow don't like the better gnu one.
        * pwsafe: fixed getyn(string&) returning true all 
          the time, thus not allowing you to not use the 
          default username. getyn(const char*) wasn't
          broken so most YN questions were fine.
        * pwsafe: fixed typo in question "user default
          username?"
        * pwsafe: release 0.1.5

2004-02-17  Nicolas S. Dade  <ndade@nsd.dyndns.org>

        * pwsafe: added configure test for readline.h's
          that are C++ safe but don't use 'const' in
          their declarations. (openbsd)

2004-02-11  Nicolas S. Dade  <ndade@nsd.dyndns.org>

        * pwsafe: fixed massive booboo in secalloc. It
          worked for me by a miracle.
        * pwsafe: added 'make test' target test.dat and 
          check script so you can verify that pwsafe
          works automatically.
        * pwsafe: always print out where we are going to
          output the username/password, so that the user
          can see in advance where it is going to go and
          abort if they didn't mean for it to do there.
        * pwsafe: added --with-openssl-dir=dir to configure
          to allow linking with openssl in other locations
          than the default.
        * pwsafe: added --without-readline to configure